# unsloth_wip

./: .env.bak  .env.example  .gitignore  .mcp.json  CLAUDE.md  PROJECT_STATUS.md  README.md  granger_security_middleware_simple.py  pyproject.toml  pyproject.toml.backup  pyproject.toml.bak  pytest.ini  requirements.txt  setup.py  test_report.json
.claude/commands/: README.md  configure-lora.md  export-adapter.md  import-qa-tuples.md  prepare-dataset.md  quickstart.md  receive-from-module.md  register.md  train.md  validate-model.md
archive/: phi3_5_inference.py  phi3_5_training.py  push_adaptor_to_hub.py  unsloth_training.py
archive/20250605/: .mcp.json.example  mcp.json  pytest.ini
archive/20250607/: 001_test_report.json
archive/backup_files/: main_minimal.py  pyproject.toml.minimal
archive/deprecated_tests/: test_dapo_integration.py  test_dashboard.py  test_entropy_aware_thinking.py  test_entropy_aware_thinking.py.mock_backup  test_entropy_aware_thinking_enhancer.py  test_entropy_aware_trainer.py  test_entropy_utils.py  test_full_pipeline.py  test_runpod_ops.py  test_suite.py  test_tensorboard_verifier.py  test_verification_engine.py
archive/old_utils/: adaptor_check.py  adaptor_sanity_check.py  check_fp8.py  clear_memory.py  prompt_template_sanity_check.py  tensorboard_utils.py
docs/: PROJECT_STATUS_TYPER.md  README.md  agent_usage_guide.md  cli_entry_points.md  runpod_implementation_summary.md  student_teacher_approach.md
docs/02_api_reference/: README.md  quick_reference.md
docs/03_guides/: README.md  complete_pipeline_guide.md
docs/03_guides/usage/: TASK_LIST_TEMPLATE_GUIDE.md
docs/04_integration/: README.md  student_teacher_integration_plan.md
docs/06_reports/: README.md
docs/06_reports/reports/: style_guide_compliance_report.md
docs/99_tasks/: README.md
docs/99_tasks/tasks/: 001_implement_thinking_enhancer.md  005_integrate_runpod_training.md  006_implement_entropy_aware_training.md  runpod-infer.md  runpod-train.md
docs/correspondence/: grokking_technique.md  perplexity_clarifying_Questions.md  perplexity_followup.md
docs/evaluation/: README.md
docs/inference/: README.md
docs/reports/: daily_verification_20250605.md  issue_resolution_report_20250605.md  task_001_entropy_utils_report.md  task_002_msmarco_loader_report.md  test_report.html  test_report.json
docs/tasks/: 002_integrate_enhanced_training.md  003_test_inference_quality.md  004_validate_full_pipeline.md
docs/usage/: TASK_LIST_TEMPLATE_GUIDE_V2.md
examples/: entropy_aware_pipeline.py  evaluate_model.py  full_pipeline_example.py  grokking_training_example.py  test_finetuned_model.py  train_arangodb_qa.py  train_with_dapo.py  train_with_student_teacher.py  universal_model_selection.py
examples/notebooks/: Phi_3_5_Instruct_Unsloth_2x_faster_finetuning.ipynb
lora_model/: adapter_config.json  tokenizer_config.json
output/tensorboard_logs/: events.out.tfevents.1734878410.DESKTOP-M90L4GB.6561.0  events.out.tfevents.1734878620.DESKTOP-M90L4GB.7125.0  events.out.tfevents.1734878705.DESKTOP-M90L4GB.7436.0  events.out.tfevents.1734880861.DESKTOP-M90L4GB.9957.0  events.out.tfevents.1734881421.DESKTOP-M90L4GB.11235.0  events.out.tfevents.1734882517.DESKTOP-M90L4GB.12104.0  events.out.tfevents.1734882723.DESKTOP-M90L4GB.12350.0
runpod_ops/: README.md
scratch/: scratch.ipynb  scratch.py  torch_check.py  xformers_check.py
scripts/: capture_screenshots.py  install_unsloth.sh  run_tests.sh
src/granger_common/: IMPLEMENTATION_EXAMPLES.md  RATE_LIMITING_IMPLEMENTATION_GUIDE.md  __init__.py  pdf_handler.py  rate_limiter.py  schema_manager.py
src/unsloth/: __init__.py  test_student_teacher.py
src/unsloth/cli/: entropy_slash_commands.py  granger_slash_mcp_mixin.py  main.py  main.py.backup  mcp_server.py  runpod_commands.py  slash_mcp_integration.py  slash_mcp_mixin.py  unified_cli.py  unified_typer_cli.py
src/unsloth/core/: config.py  cost_aware_model_selector.py  enhanced_config.py  grokking_config.py  model_selector.py  multi_gpu_cost_optimizer.py
src/unsloth/evaluation/: __init__.py  config.py  dashboard.py  entropy_evaluator.py  evaluator.py  litellm_evaluator.py  multi_model_evaluator.py
src/unsloth/inference/: __init__.py  generate.py  merge_adapter.py
src/unsloth/integrations/: __init__.py
src/unsloth/mcp/: __init__.py  prompts.py  server.py  unsloth_prompts.py
src/unsloth/pipeline/: complete_training_pipeline.py
src/unsloth/runpod/: __init__.py  instance_manager.py
src/unsloth/templates/: model_card_template.md
src/unsloth/training/: __init__.py  dapo_rl.py  enhanced_trainer.py  entropy_aware_trainer.py  entropy_utils.py  grokking_callback.py  runpod_notes.md  runpod_serverless.py  runpod_trainer.py  runpod_trainer_v2.py  runpod_training_ops.py  trainer.py
src/unsloth/upload/: __init__.py  entropy_aware_hub_uploader.py  hub_uploader.py
src/unsloth/utils/: __init__.py  error_recovery.py  logging.py  memory.py  tensorboard_verifier.py
src/unsloth/validation/: model_validator.py
src/unsloth/visualization/: __init__.py  entropy_visualizer.py
src/unsloth_wip/: __init__.py
tests/: conftest.py  test_honeypot.py  test_reporting_setup.py  test_runpod_import.py
tests/benchmarks/: benchmark_entropy_training.py
tests/integration/: test_dashboard_simple.py
tests/mcp/: test_prompts.py
tests/unit/: test_basic.py  test_msmarco_loader.py  test_msmarco_loader.py.mock_backup  test_msmarco_loader_real.py  test_student_teacher.py
transcripts/: High-Entropy Tokens- 20- Control AI Reasoning (DAPO RL)_transcript.txt
(+4 files in other folders)
