[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]"
name = "unsloth"
version = "0.1.0"
description = "Unsloth fine-tuning pipeline for LoRA adapters"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "datasets>=2.16.0",
    "huggingface-hub>=0.20.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "rapidfuzz>=3.0.0",
    "trl>=0.7.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0",
    "tensorboard>=2.15.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "runpod>=1.0.0",
    "httpx>=0.25.0",
    "yaspin>=3.0.0",
    "aiofiles>=23.0.0",
    "tqdm>=4.65.0",
    "litellm>=1.0.0",
    "jsonpickle>=3.0.0",
    "claude-test-reporter @ git+https://github.com/grahama1970/claude-test-reporter.git@main",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "arxiv>=2.2.0",
]"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]"

[project.scripts]"
unsloth = "unsloth.cli.unified_typer_cli:app"
unsloth-cli = "unsloth.cli.main:app"
unsloth-mcp = "unsloth.cli.mcp_server:main"

[tool.setuptools.packages.find]"
where = ["src"]"

[tool.setuptools.package-data]
unsloth = ["templates/*.md"]"

[tool.ruff]"
line-length = 100
target-version = "py310"

[tool.ruff.lint]"
select = ["E", "F", "I", "N", "W", "B", "C90", "UP", "YTT", "S", "A", "C4", "T10", "SIM", "ARG"]"
ignore = ["E501", "S101", "S603", "S607"]"

[tool.mypy]"
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]"
testpaths = ["tests"]"
python_files = ["test_*.py", "*_test.py"]"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.1.1",
]"
